# agentic-forecasting

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
implementations/: README.md  pyproject.toml
implementations/boc_rate_decisions/: 01_boc_data_exploration.ipynb  02_boc_rate_cut_experiment.ipynb  02_boc_rate_direction_experiment.ipynb  README.md  analysis.py  plots.py
implementations/economic_forecasting/: cpi_backtest_demo.ipynb
implementations/energy_oil_forecasting/: 05_adaptive_agent_training.ipynb  05_forecast_tool_demo.ipynb  06_protected_eval.ipynb  99_starter_agent.ipynb  README.md  analysis.py
implementations/energy_oil_forecasting/analyst_agent/: __init__.py  agent.py
implementations/energy_oil_forecasting/starter_agent/: __init__.py  agent.py  tools.py
implementations/experiments/: README.md
implementations/experiments/economic_forecasting/: README.md  cpi_backtest_demo.ipynb  cpi_data_exploration.ipynb
implementations/experiments/food_price_forecasting/: README.md  food_cpi_experiment.ipynb
implementations/experiments/getting_started/: README.md
implementations/food_price_forecasting/: 02_food_cpi_experiment.ipynb  README.md  analysis.py
implementations/getting_started/: 00_environment_check.ipynb  README.md  cpi_backtest_demo.ipynb
implementations/getting_started/specs/: cpi_gasoline_eval_2025.yaml
implementations/methods/: README.md  __init__.py  darts_regression.py  naive.py
implementations/sp500_forecasting/: 01_sp500_multivariate_backtest.ipynb  README.md  __init__.py  backtest_grid.py  leaderboard.py  plots.py
(+53 files in other folders)
