[project]
name = "aieng-implementations"
version = "0.1.0"
description = "Reference method implementations for the Agentic Forecasting Bootcamp"
authors = [{name = "Vector AI Engineering", email = "ai_engineering@vectorinstitute.ai"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aieng-forecasting"]

[tool.uv.sources]
aieng-forecasting = { workspace = true }

[tool.setuptools.packages.find]
include = ["methods*"]
